<resources>
    <string name="app_name">Calculo IMC</string>
    <string name="hint_your_Weight">Digite seu peso</string>
    <string name="hint_your_height">Digite a sua altura</string>
    <string name="button_calcular">Calcular</string>
    <string name="button_voltar">Voltar</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="imc">IMC</string>
    <string name="Preencher">Preencha todos os campos</string>
    <string name="Sobre_mim">Sobre mim</string>
    <string name="nome">Gabriel Espanhol</string>
    <string name="idade">21 anos</string>
    <string name="profissao">Profissão : Arquiteto De Dados</string>
    <string name="gosto1">Gosto de Livros</string>
    <string name="gosto2">Gosto de Animes</string>
</resources>